[package]
name = "sumup"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "SumUp API"

[dependencies]
log = "0.4"
serde_json = "1.0"
thiserror = "2.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.ureq]
version = "2.5"
features = ["json"]

[dev-dependencies]
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
